Fixed validation errors.

--- a/views/home.pug
+++ b/views/home.pug
@@ -27,7 +27,7 @@ block append body
 						label.required(for='fileInput') Upload your file!
 						input#fileInput.required(name='file' type='file' required)
 					br
-					button.btn.btn-primary.btn-lg(type='submit' action='sumbit') Submit
+					button.btn.btn-primary.btn-lg(type='submit') Submit
 		.col-md-12.text-center
 			a#view-btn.btn.btn-success.center(href="/uploads") Browse Uploaded Files 
 				+icon("cloud-download")
