--- a/views/layout.pug
+++ b/views/layout.pug
@@ -1,10 +1,9 @@
 extends ../node_modules/pug-bootstrap/_bootstrap
-block append head
+block append styles
 	link(rel='stylesheet', href='css/styles.css', type='text/css' )
-
+	
 block body
-	body
-		include ./navbar.pug
+	include ./navbar.pug
 
 block append scripts
 	script(src='/js/main.js')
