--- a/views/navbar.pug
+++ b/views/navbar.pug
@@ -17,9 +17,9 @@ block append body
           li
             button#jam-button.btn.btn-primary Let's Jam
           li
-            img#jam-pic.nav-item(src='/res/catjam.png')
+            img#jam-pic.nav-item(src='/res/catjam.png' alt='Cat JAM')
           li
             p#jam-title Örfaz - Home Run (Desmeon Remix)
-            audio#jam-song(loop src="/res/home run.mp3")
+            audio#jam-song(loop src="/res/home_run.mp3")
 block append scripts
   script(src="/js/jam.js")
