--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,43 +1,101 @@
-@import url('https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,400;0,700;1,400;1,700&family=Ubuntu:ital,wght@0,400;0,700;1,400;1,700&display=swap');
-:root {
-    --body-background: #464946;
-    --header-background: #242423;
-    --primary-accent: #af89be;
-    --text-color: #f5f5f5;
-    --card-background: #dce5e0;
-
-}
-
-html {
-    font-family: 'Cormorant Garamond', serif;
-    font-family: 'Ubuntu', sans-serif;
-}
-
-body {
-    margin: 0;
-    width: 100%;
-    height: 100vh;
-    background-color: var(--body-background);
-    position: relative;
-}
-
-main {
-    max-width: 1440px;
-    margin: auto;
-    text-align: left;
-    padding: 2rem;
-}
-
 .c_catInfo {
     text-align: center;
+    margin-bottom: 3rem;
 }
 
 .c_catList {
+    margin-top: 2rem;
     display: flex;
+    flex-direction: row;
+    overflow-x: scroll;
 }
 
-.c_catList__heading {
-    flex: 0 0 100%;
+#loadingMessage {
+    text-align: center;
+    margin-top: 2rem;
+}
+
+#userCatHeading {
+    display: none;
+}
+
+.c_catCard {
+    background-color: var(--card-background);
+    border-radius: 5px;
+    max-width: 300px;
+    height: 600px;
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: auto min-content 150px;
+    box-shadow: -1rem 0 3rem #000;
+
+    transition: 0.3s;
+}
+
+.c_catCard:hover {
+    transform: translateY(-1rem);
+}
+
+.c_catCard:hover~.c_catCard {
+    transform: translateX(140px);
+}
+
+.c_catCard:not(:first-child) {
+    margin-left: -140px;
+}
+
+.c_catCard__catImage {
+    width: 300px;
+    height: auto;
+    border-top-left-radius: 5px;
+    border-top-right-radius: 5px;
+}
+
+.c_catCard__catHeader {
+    margin: 0 1rem 0rem 1rem;
+}
+
+.c_catCard__catInformation {
+    padding: 1rem;
+    overflow-y: scroll;
+    align-self: end;
+}
+
+.c_catCard__description {
+    font-size: 0.9rem;
+}
+
+.c_catList__primaryButton {
+    border: none;
+    padding: 0.25rem 1rem;
+    border-radius: 6px;
+    background-color: var(--primary-accent);
+    color: var(--text-color);
+    font-weight: bold;
+    text-transform: uppercase;
+    box-shadow: 0 4px 4px 0 rgba(0,0,0,.5);
+    font-size: 1.1rem;
+    width: max-content;
+}
+
+.c_catList__secondaryButton {
+    border: 1px solid var(--primary-accent);
+    padding: 0.25rem 1rem;
+    border-radius: 6px;
+    background-color: white;
+    color: var(--primary-accent);
+    font-weight: bold;
+    text-transform: uppercase;
+    box-shadow: 0 4px 4px 0 rgba(0,0,0,.5);
+    font-size: 1.1rem;
+    width: max-content;
+
+}
+
+
+.c_catList__primaryButton:hover, .c_catList__secondaryButton:hover {
+    filter: saturate(200%);
+    cursor: pointer;
 }
 
 .c_header {
@@ -47,10 +105,11 @@ main {
 
 .c_footer {
     width: 100%;
-    position: absolute;
+    position: fixed;
     bottom: 0;
     text-align: center;
     background-color: var(--header-background);
+    height: var(--footer-height);
 }
 
 .c_footer__information {
