--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,1 +1,43 @@
-/*Style your own assignment! This is fun! */
+body {
+  background-color: #ff9999;
+}
+h1 {
+  text-align: center;
+}
+form {
+  width: 190px;
+  margin: auto;
+}
+input {
+  padding: 5px;
+  display: block;
+  margin-bottom: 20px;
+  border: 3px solid #c91c1c;
+  width: 100%;
+}
+button {
+  background-color: #f74848;
+  border: 3px solid #c91c1c;
+  width: 100px;
+  height: 25px;
+}
+.flex-box {
+  position: absolute;
+  
+  display: flex;
+  flex-direction: column;
+  background: #cf3232;
+  justify-content: space-between;
+  list-style: none;
+  width: 500px;
+}
+.flex-item {
+  background: #db4040;
+  margin-top: 10px;
+  color: white;
+  font-weight: bold;
+  text-align: center;
+  padding: 5px;
+  width: 300px;
+  align-items: center;
+}
