--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,1 +1,119 @@
-/*Style your own assignment! This is fun! */
+* {
+  box-sizing: border-box;
+}
+
+main{
+  display: flex;
+  justify-content: center;
+  font-family: 'Kumbh Sans', sans-serif;
+}
+
+#list{
+ width: 85%;
+}
+
+h1, #edit_Title{
+  background-color: #76E8D5;
+  color: #222D42;
+  font-size: 1.5em;
+}
+
+input {
+  font-size: 16px;
+  margin: 0;
+  width: 75%;
+  padding: 10px;
+  float: left;
+  border: none;
+  border-radius: 0;
+  
+}
+
+ul {
+  margin: 0;
+  padding: 0;
+  list-style-type: none;
+}
+
+ul li {
+  background-color: #D7E8E4;
+  font-size: 18px;
+  cursor: pointer;
+  position: relative;
+  padding: 12px 8px 12px 40px;
+  transition: 0.2s;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+
+ul li:hover {
+  background-color: #82B2FF;
+}
+
+ul li.checked::before {
+  content: '';
+  position: absolute;
+  border-color: #fff;
+  border-style: solid;
+  border-width: 0 2px 2px 0;
+  top: 10px;
+  left: 16px;
+  transform: rotate(45deg);
+  height: 15px;
+  width: 7px;
+}
+
+ul li.checked {
+  background-color: #82B2FF;
+  color: #fff;
+  text-decoration: line-through;
+}
+
+#edit_Title{
+  color: black;
+  outline: none;
+}
+
+.header {
+  background-color: #76E8D4;
+  padding: 30px 40px;
+  color: #ffffff;
+  text-align: center;
+}
+
+.header:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+.close {
+  position: absolute;
+  right: 0;
+  top: 0;
+  padding: 12px 16px 12px 16px;
+}
+
+.close:hover {
+  background-color: #FFD798;
+  color: white;
+}
+
+.addBtn {
+  padding: 11px;
+  width: 25%;
+  background-color: #76BFE8;
+  color: #ffffff;
+  float: left;
+  text-align: center;
+  font-size: 16px;
+  cursor: pointer;
+  transition: 0.3s;
+  border-radius: 0;
+}
+
+.addBtn:hover {
+  background-color: #FFD798;
+}
