--- a/public/css/style.css
+++ b/public/css/style.css
@@ -5,25 +5,107 @@
     light yellow: #ede9ce
 */
 
-
-.container {
-    margin-left: 25%;
-    margin-right: 25%;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    /*;*/
-    color: #ede9ce;
-    font-family: 'Grandstander', cursive;
+body, html{
+    height: 100%;
+}
+.title {
+    height: 25%;
+    background-image: url(grocery_store.jpg);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    position: relative;
 }
 
-#box{
-    background-color: #70352f;
-    height: 100px;
-    width: 500px;
-    display:flex;
-    justify-content: center;
-    align-items: center;
+.title_text{
+    text-align: center;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    font-size: larger;
+    text-shadow: -1px 1px 0 #000,
+				  1px 1px 0 #000,
+				 1px -1px 0 #000,
+				-1px -1px 0 #000;
+    font-family: 'Grandstander', cursive;
+    color: white;
+}
+
+.container{
+    display: flex;
+    justify-content: space-around;
+    
+}
+
+form{
+    background-color: #2f593a;
+    padding: 50px;
+    color: #ede9ce;
+    font-family: 'Lato', sans-serif;
+    border: 4px solid black;
+    border-radius: 5px;
+    box-shadow: 10px 10px 0px 0px rgba(17,30,64,1);
+}
+
+#item, #amount{
+    
+    height: 50px;
+    width: 300px;
+    font-size: 25px;
+    
+    color: black;
+}
+#price{
+   
+    height: 50px;
+    width: 100px;
+    font-size: 25px;
+    
+    color: black;
+}
+#priceType{
+    height: 55px;
+    width: 195px;
+    font-size: 25px;
+    color: black;
+}
+#department{
+   
+    height: 50px;
+    width: 300px;
+    font-size: 25px;
+    color: black;
+}
+
+button{
+    height: 40px;
+    background-color: #ede9ce;
+    font-size: 15px;
+    color: black;
+    font-family: 'Lato', sans-serif;
+    cursor: pointer;
+    border: 0;
+    margin-top: 25px;
+    width: 300px;
+}
+#calculateTotal{
+    width: auto;
+    border: 4px solid black;
+    border-radius: 5px;
+    box-shadow: 10px 10px 0px 0px rgba(17,30,64,1);
+    margin-top: 50px;
+    font-size: 20px;
+}
+
+.totalOutput{
+    width : 200px;
+    height: 50px;
+    margin-top: 50px;
+    background-color: white;
+    padding-left: 10px;
+    padding-top: 10px;
+    font-family: 'Lato', sans-serif;
 }
 
 body {
@@ -31,5 +113,14 @@ body {
 }
 
 h3{
-    background-image: url("public\notebook.jpg");
+    background-image: url(notebook.png);
+    background-repeat: repeat;
+    position: relative;
+    width: 50%;
+    font-family: 'Grandstander', cursive;
+    padding: 25px;
+    padding-left: 100px;
+    border: 4px solid black;
+    border-radius: 5px;
+    box-shadow: 10px 10px 0px 0px rgba(17,30,64,1);
 }
