--- a/public/css/style.css
+++ b/public/css/style.css
@@ -112,15 +112,25 @@ body {
     background-color: #afdba0;
 }
 
-h3{
+.theList{
+    margin: 25px;
+  font-weight: bold;
+  font-size: 20px;
     background-image: url(notebook.png);
     background-repeat: repeat;
     position: relative;
     width: 50%;
     font-family: 'Grandstander', cursive;
+    font-size: large;
     padding: 25px;
     padding-left: 100px;
     border: 4px solid black;
     border-radius: 5px;
     box-shadow: 10px 10px 0px 0px rgba(17,30,64,1);
+}
+
+.theForm{
+  margin: 25px;
+  font-weight: bold;
+  font-size: 20px;
 }
