--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,1 +1,75 @@
 /*Style your own assignment! This is fun! */
+body{
+  background-color: #9DD6A7;
+  font-family: 'Roboto', serif;
+  color: #171A17;
+}
+
+#title{
+  font-size:36px;
+  text-shadow: 4px 4px 4px #aaa;
+}
+
+.stat{
+  color: #cc2114;
+}
+
+form{
+  display: flex;
+  flex-flow: row wrap;
+  max-width: 330px;
+}
+
+#submit{
+  width: 100%
+}
+
+.break {
+  flex-basis: 100%;
+  height: 0;
+}
+
+.row{
+  background-color: #86E39D;
+  display:flex;
+  height: 500px;
+}
+
+.column{
+  flex:50%;
+  padding: 10px;
+}
+
+.container{
+  display:flex;
+  padding: 5px;
+  
+}
+
+table, th, td{
+  border: 2px solid black;
+  border-collapse: collapse;
+  
+}
+
+table{
+  background-color: white;
+  width: 100%
+}
+
+th{
+  background-color:#25572E;
+  text-shadow: -1px 1px 0 #000,
+				  1px 1px 0 #000,
+				 1px -1px 0 #000;
+				-1px -1px 0 #000;
+  color:white;
+  height: 50px;
+}
+
+td{
+  text-align:center;
+}
+
+
+
