Fixed delete method

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,1 +1,13 @@
 /*Style your own assignment! This is fun! */
+/*
+Various CSS Selector functionality must be demonstrated:
+
+Element selectors
+ID selectors
+Class selectors
+ */
+table {
+
+}
+
+
