--- a/public/css/main.css
+++ b/public/css/main.css
@@ -35,7 +35,7 @@
   justify-content: space-between; }
 
 body {
-  background-color: navy;
+  background-color: #0b132b;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -43,7 +43,7 @@ body {
   flex-basis: 0; }
 
 section {
-  background-color: darkgreen;
+  background-color: #4e6766;
   border-radius: 2px;
   border: none;
   margin: 2em;
@@ -77,19 +77,19 @@ th {
   /* Simple transition for hover effect */ }
 
 th {
-  background: #dfdfdf;
+  background: #e09f3e;
   /* Darken header a bit */
   font-weight: bold; }
 
 td {
-  background: #fafafa;
+  background: #e09f3e;
   text-align: center; }
 
 tr:nth-child(even) td {
-  background: #f1f1f1; }
+  background: #cce3de; }
 
 tr:nth-child(odd) td {
-  background: #fefefe; }
+  background: #c2c2c2; }
 
 tr td:hover {
   background: #666;
@@ -98,3 +98,7 @@ tr td:hover {
 table {
   width: 100%;
   height: 100%; }
+
+button {
+  background-color: #c2c2c2;
+  color: #0b132b; }
