--- a/sass/main.scss
+++ b/sass/main.scss
@@ -45,7 +45,7 @@
 }
 
 body {
-  background-color: navy;
+  background-color: $color4;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -54,7 +54,7 @@ body {
 }
 
 section {
-  background-color: darkgreen;
+  background-color: $color2;
   border-radius: 2px;
   border: none;
   margin: 2em;
@@ -93,21 +93,21 @@ th {
 }
 
 th {
-  background: #dfdfdf; /* Darken header a bit */
+  background: $color1; /* Darken header a bit */
   font-weight: bold;
 }
 
 td {
-  background: #fafafa;
+  background: $color1;
   text-align: center;
 }
 
 tr:nth-child(even) td {
-  background: #f1f1f1;
+  background: $color3;
 }
 
 tr:nth-child(odd) td {
-  background: #fefefe;
+  background: $color5;
 }
 
 tr td:hover {
@@ -118,4 +118,9 @@ tr td:hover {
 table {
   width: 100%;
   height: 100%;
+}
+
+button {
+  background-color: $color5;
+  color: $color4;
 }
