--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,1 +1,162 @@
-/*Style your own assignment! This is fun! */
+@font-face {
+    font-family: "Bungee";
+    src: url("../fonts/Bungee-Regular.ttf");
+}
+
+@font-face {
+    font-family: "Typewriter";
+    src: url("../fonts/Impact_label.ttf");
+}
+
+header {
+    margin: -1em;
+    font-family: "Bungee", serif;
+    font-size: 3.0em;
+    text-align: center;
+    color: #479761;
+    text-shadow: -4px 0 #2c613d, 0 1px #2c613d, 1px 0 #2c613d, 0 -1px;
+}
+
+
+body {
+    background-color: #19181A;
+    color: #479761;
+}
+
+
+#main_grid {
+    display: grid;
+}
+
+
+#musician_records {
+    grid-column: 1;
+    grid-row: 1;
+    margin: auto;
+}
+
+#page_form {
+    grid-column: 1;
+    grid-row: 2;
+}
+
+
+input{
+    width: 20em;
+}
+
+
+/*Form styling*/
+form {
+    color: #479761;
+    display: grid;
+    grid-gap: 1em;
+    grid-template-columns: .1fr 1fr .1fr 1fr;
+    border: solid 1em #479761;
+    box-shadow: -4px 0 #2c613d, 0 1px #2c613d, 1px 0 #2c613d, 0 -1px;
+    border-radius: 1em;
+    margin: 4em auto 4em auto;
+    padding: 2em;
+    background-color: #19181A;
+    font-family: "Bungee", serif;
+}
+
+
+/*Form Labels*/
+#artist_label {
+    grid-column: 1;
+    grid-row: 1;
+}
+#artist_input {
+    grid-column: 2;
+    grid-row: 1;
+}
+
+#born_label {
+    grid-column: 1;
+    grid-row: 2;
+}
+#born_input {
+    grid-column: 2;
+    grid-row: 2;
+}
+
+#birthplace_label {
+    grid-column: 1;
+    grid-row: 3;
+}
+#birthplace_input {
+    grid-column: 2;
+    grid-row: 3;
+}
+
+#genre_label{
+    grid-column: 3;
+    grid-row: 1;
+}
+
+#genre_input{
+    grid-column: 4;
+    grid-row: 1;
+}
+
+#died_label {
+    grid-column: 3;
+    grid-row: 2;
+
+}
+#died_input {
+    grid-column: 4;
+    grid-row: 2;
+}
+
+#register_button {
+    border-radius: 0.5em;
+    grid-column: 1;
+    grid-row: 5;
+    font-family: "Bungee", serif;
+}
+
+
+#delete_button{
+    border-radius: 0.5em;
+    grid-column:1;
+    grid-row: 6;
+    font-family: "Bungee", serif;
+}
+
+#delete_button:hover{
+    background-color:  #479761;
+}
+
+#delete_input{
+    grid-column: 2;
+    grid-row: 6;
+    width: 3em;
+}
+
+
+#register_button:hover {
+    background-color:  #479761;
+}
+
+
+table, th, tr, td{
+    font-family: "Typewriter", serif;
+    font-size: 1.1em;
+    border: solid #479761 1px;
+    border-collapse: collapse;
+    padding:0.2em;
+}
+
+a{
+    text-decoration: none;
+}
+
+a:visited{
+    color: #479761;
+}
+a:hover{
+    color: #A34564;
+}
+
