--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,1 +1,56 @@
-/*Style your own assignment! This is fun! */
+h2 {
+    color: #ffffff
+}
+
+p {
+    color: #ffffff
+}
+
+body {
+    background-color: #0f11a3;
+}
+
+
+td {
+    padding: 10px;
+}
+
+th {
+    padding: 10px;
+}
+
+title {
+    font-family: "Roboto", sans-serif;
+    justify-content:center;
+    color: #ffffff
+}
+
+.container {
+    justify-content: left;
+}
+
+button {
+    font-family: "Roboto", sans-serif;
+}
+
+
+th {
+    border-bottom: 5px solid #ffffff;
+    font-family: "Roboto", sans-serif;
+    color: #ffffff
+}
+
+tr {
+    font-family: "Roboto", sans-serif;
+    color: #ffffff
+}
+
+h1 {
+    color: #ffffff
+}
+
+input {
+    margin-bottom: 10px;
+    margin-top:15px;
+    font-family: "Roboto", sans-serif;
+}
