--- a/public/css/style.css
+++ b/public/css/style.css
@@ -45,5 +45,6 @@ table, th, td {
 body {
     display: flex;
     flex-direction: column;
+    justify-content: space-between;
     background-color: cornsilk;
 }
