--- a/public/css/style.css
+++ b/public/css/style.css
@@ -8,14 +8,29 @@ table, td, th {
   border: 4px solid black;
   color: black;
   align-self: center;
+  
+}
+
+h1 
+{
+  text-align: center;
 }
 
 .inputs {
   font-family: "Poppins";
+  align: center;
+  width: 30%;
+  
 }
 
 button {
   font-family: "Poppins";
+  display: flex;
+}
+
+.buttons {
+  font-family: "Poppins";
+  display: flex;
 }
 
 .flex-container {
@@ -29,3 +44,5 @@ table {
   margin-left: auto;
   margin-right: auto;
 }
+
+
