Added Lato to buttons

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -22,6 +22,9 @@ priority{
 p{
   margin-right: 36px; 
 }
+button{
+  font-family: 'Lato', sans-serif;
+}
 .deleteButton{
   background-color: #E97451;
 }
