--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,1 +1,63 @@
 /*Style your own assignment! This is fun! */
+
+
+.container {
+    display: grid;
+    width: 750px;
+    height: 600px;
+    grid-template-columns: 200px 1fr 1fr;
+    grid-template-rows: 80px 1fr 1fr 100px;
+    grid-gap: 1rem;
+  }
+
+  
+  .sidebar {
+    grid-row: 2 / 4;
+    grid-column: 1 / 2;
+  }
+  
+  .content-1 {
+    grid-row: 2 / 3;
+    grid-column: 2 / 3;
+  }
+  
+  .content-2 {
+    grid-row: 3 / 4;
+    grid-column: 2 / 3;
+  }
+  
+  .content-3 {
+    grid-row: 3 / 4;
+    grid-column: 3 / 4;
+  }
+
+  .content-4 {
+    grid-row: 1 / 2;
+    grid-column: 1 / 4;
+  }
+  
+  .footer {
+    grid-row: 4 / 5;
+    grid-column: 1 / 4;
+  }
+
+
+body {
+    background-color: #0079FA;
+    color:white;
+  }
+  
+  h1 {
+    color:white;
+    margin-left: 20px;
+
+  }
+
+  #section{
+    background-color: rgb(82, 7, 4);
+    padding:15px;
+  }
+
+  table{
+      border-collapse: collapse;
+  }
