--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,1 +1,88 @@
 /*Style your own assignment! This is fun! */
+html, body {
+    margin:0;
+    padding:0;
+    background-color: #3e3e40;
+    color: #cdcdd4;
+}
+
+.wrapper{
+  display: grid;
+  grid-template-rows: repeat(7 1fr);
+  grid-template-columns: 2fr 3fr 0.5fr 1.5fr 1fr;
+}
+.head {
+  grid-column: 2 / 3;
+  grid-row: 1 / 3;
+}
+.form {
+  grid-column: 2;
+  grid-row: 3 / 6;
+}
+
+.yourlist {
+  grid-column: 4;
+  grid-row: 4 / 5;
+  background-color: #58585c;
+  border-bottom-left-radius: 10px;
+  border-bottom-right-radius: 10px;
+}
+
+.listhead {
+  grid-column: 4;
+  grid-row: 3 / 4;
+  text-align: center;
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
+  background-color: #58585c
+}
+
+.otherusers {
+  grid-column: 4;
+  grid-row: 5;
+  text-align: center;
+  background-color: #58585c;
+  margin-top: 20px;
+  border-radius: 10px;
+}
+h1 {
+  font-family: "Roboto";
+}
+h2 {
+  font-family: "Roboto";
+}
+h3 {
+  font-family: "Roboto";
+}
+p {
+  font-family: "Open Sans";
+}
+
+label {
+  font-family: "Roboto";
+  margin-right: 5px;
+}
+
+button {
+  font-family: "Roboto";
+  font-size: 1.17em;
+  font-weight: bolder;
+  color: #cdcdd4;
+  background-color: #6c6c70;
+  margin-top: 20px;
+  padding: 20px;
+  width: 100%;
+  border-radius: 10px;
+  border: none;
+}
+input {
+  padding: 5px;
+  background-color: #58585c;
+  border: none;
+  width: 100%;
+  font-family: "Open Sans";
+  color: #cdcdd4;
+}
+ol{
+  font-family: "Open Sans";
+}
