--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,5 +1,6 @@
 body {
   background-color: #ff9999;
+  font-family: "Lucida Sans Unicode"
 }
 h1 {
   text-align: center;
@@ -20,24 +21,29 @@ button {
   border: 3px solid #c91c1c;
   width: 100px;
   height: 25px;
+  margin-left: 50px;
 }
-.flex-box {
-  position: absolute;
-  
+#flex-label{
+  margin-left: 520px;
+}
+#flex-box {
+  flex-wrap: wrap;
   display: flex;
-  flex-direction: column;
   background: #cf3232;
-  justify-content: space-between;
+  justify-content: space-evenly;
+  align-items: space-around;
   list-style: none;
-  width: 500px;
+  width: 450px;
+  margin-left: 520px;
 }
 .flex-item {
   background: #db4040;
   margin-top: 10px;
+  margin-bottom: 10px;
   color: white;
   font-weight: bold;
   text-align: center;
   padding: 5px;
-  width: 300px;
+  width: 100px;
   align-items: center;
 }
